--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
 version: "3"
 services:
-  postgres:
-    image: postgres
-    environment:
-      # TODO: Change me
-      POSTGRES_DB: template
-      POSTGRES_PASSWORD: pass
-      POSTGRES_USER: user
-    volumes:
-      - data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    networks:
-      - service-template
-
-  service-template: # TODO: Change me
+  uptimebeaver-gateway:
     build: .
     restart: always
     env_file:
@@ -22,10 +8,10 @@ services:
     ports:
       - ${PORT}:${PORT}
     networks:
-      - service-template # TODO: Change me
+      - uptimebeaver-gateway
 
 volumes:
   data:
 
 networks:
-  service-template: # TODO: Change me
+  uptimebeaver-gateway:
