--- a/k8s/Chart.yaml
+++ b/k8s/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: service-template # TODO: Change me
+name: uptimebeaver-gateway
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
