--- a/k8s/templates/deployment.yml
+++ b/k8s/templates/deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: template-service # TODO: Change me
+  name: uptimebeaver-gateway
   labels:
-    app: template-service # TODO: Change me
+    app: uptimebeaver-gateway
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: template-service # TODO: Change me
+      app: uptimebeaver-gateway
   template:
     metadata:
       labels:
-        app: template-service # TODO: Change me
+        app: uptimebeaver-gateway
     spec:
       containers:
-        - name: template-service # TODO: Change me
-          image: ghcr.io/uptimebeaver/service-template:latest  # TODO: Change me
+        - name: uptimebeaver-gateway
+          image: ghcr.io/uptimebeaver/uptimebeaver-gateway:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 50051
