--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -1,4 +1,4 @@
-# Default values for service-template.
+# Default values for uptimebeaver-gateway.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
